# Molecule-visualizer

./: .env.example  .gitignore  3dmodels.html  LICENSE  README.md  docker-compose.yml  index.html  main.js  package-lock.json  package.json  vite.config.js
backend/: Dockerfile  __init__.py  app.py  environment.yml  geometry.py  molecules.py  parsing.py  pyproject.toml  requirements.txt  schemas.py
backend/app/: __init__.py  asgi.py  main.py  models.py  storage.py
backend/services/: molecule_parser.py
backend/tests/: test_app.py  test_molecule_parsing.py
backend/tests/data/: water.mol  water.sdf  water.xyz
backend/utils/: file_handling.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/lib/: api.ts
frontend/public/: index.html  main.js
frontend/public/components/: MoleculeViewer.js
frontend/public/data/: sampleMolecules.js
frontend/public/samples/: co2.xyz  methane.mol  water.sdf
frontend/public/utils/: load3dmol.js
frontend/scripts/: dev-server.mjs
frontend/src/: App.tsx  main.js  main.tsx  style.css
frontend/src/components/: MoleculeViewer.css  MoleculeViewer.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: types.ts
frontend/src/styles/: index.css
input builder/: index.html
src/: main.js  style.css
