[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecule-backend"
version = "0.1.0"
description = "FastAPI backend for the molecule visualizer prototype."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112.0,<0.113.0",
    "pydantic>=2.8.0,<3.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
